Aumenta o contraste do botão de ação - resolve #331

--- a/src/main/assets/stylesheets/_acessibilidade.scss
+++ b/src/main/assets/stylesheets/_acessibilidade.scss
@@ -47,6 +47,11 @@ body.contraste {
     color: $branco !important;
   }
 
+  #conteudo a.acao {
+    background-color: $branco;
+    color: $preto !important;
+  }
+
   #acessibilidade span {
     color: $preto !important;
   }
